[project]
name = "defi-risk-scanner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "joblib>=1.3.0",
    "ipykernel>=6.0.0",
]
